# Hatch

./: .gitignore  .gitmodules  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  README.md  VERSION  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  environment_issue.yml  feature_request.yml  package_issue.yml
.github/workflows/: prerelease-discord-notification.yml  release-discord-notification.yml  semantic-release.yml  test_build.yml
__temp__/: CONNECTION_INSTRUCTIONS.md  hatch_developer_perspective_report.md  hatch_limitations_analysis_v0.4.2.md  mcp_server_source_file_reload.md  plan_for_ext_deps_install_support.md
docs/: _config.yml  index.md  mcp_host_configuration_api_reference.md  mcp_host_configuration_implementation_guide.md  requirements.txt
docs/articles/api/: cli.md  environment_manager.md  index.md  package_loader.md  python_environment_manager.md  registry_explorer.md  template_generator.md
docs/articles/api/installers/: base.md  context.md  docker.md  hatch.md  orchestrator.md  python.md  system.md
docs/articles/appendices/: LimitsAndKnownIssues.md  glossary.md  index.md  state_and_data_models.md
docs/articles/devs/: index.md
docs/articles/devs/architecture/: component_architecture.md  index.md  mcp_backup_system.md  mcp_host_configuration.md  system_overview.md
docs/articles/devs/contribution_guides/: how_to_contribute.md  index.md  release_policy.md
docs/articles/users/: CLIReference.md  GettingStarted.md  MCPHostConfiguration.md  SecurityAndTrust.md
docs/resources/diagrams/: architecture.puml
hatch/: __init__.py  cli_hatch.py  environment_manager.py  package_environments.py  package_loader.py  package_manager.py  python_environment_manager.py  registry_explorer.py  registry_retriever.py  template_generator.py
hatch/installers/: __init__.py  dependency_installation_orchestrator.py  docker_installer.py  hatch_installer.py  installation_context.py  installer_base.py  python_installer.py  registry.py  system_installer.py
hatch/mcp/: __init__.py
hatch/mcp_host_config/: __init__.py  backup.py  host_management.py  models.py  strategies.py
tests/: run_environment_tests.py  test_data_utils.py  test_docker_installer.py  test_env_manip.py  test_hatch_installer.py  test_installer_base.py  test_mcp_atomic_operations.py  test_mcp_backup_integration.py  test_mcp_cli_backup_management.py  test_mcp_cli_direct_management.py  test_mcp_cli_discovery_listing.py  test_mcp_cli_package_management.py  test_mcp_environment_integration.py  test_mcp_host_config_backup.py  test_mcp_host_registry_decorator.py  test_mcp_server_config_models.py  test_non_tty_integration.py  test_online_package_loader.py  test_python_environment_manager.py  test_python_installer.py  test_registry.py  test_registry_retriever.py  test_system_installer.py  test_wobble_migration.py
tests/test_data/configs/: non_tty_test_config.json
tests/test_data/fixtures/: environment_host_configs.json  host_sync_scenarios.json  installation_plans.json
(+42 files in other folders)
