[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hatch"
version = "0.1.0"
authors = [
  { name = "Hatch Team" },
]
description = "Package manager for the Hatch! ecosystem"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

dependencies = [
    "jsonschema>=4.0.0",
    "requests>=2.25.0",
    "packaging>=20.0",
]

[project.scripts]
hatch = "hatch.cli_hatch:main"

[project.urls]
"Homepage" = "https://github.com/CrackingShells/Hatch"
"Bug Tracker" = "https://github.com/CrackingShells/Hatch/issues"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["hatch"]