[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hatch"
dynamic = ["version"]
authors = [
  { name = "Hatch Team" },
]
description = "Package manager for the Cracking Shells ecosystem"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

dependencies = [
    "jsonschema>=4.0.0",
    "requests>=2.25.0",
    "packaging>=20.0",
    "docker>=7.1.0",
    
    "hatch_validator @ git+https://github.com/CrackingShells/Hatch-Validator.git@v0.7.0"
]

[project.scripts]
hatch = "hatch.cli_hatch:main"

[project.urls]
"Homepage" = "https://github.com/CrackingShells/Hatch"
"Bug Tracker" = "https://github.com/CrackingShells/Hatch/issues"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["."]